Add scale benchmarks to CI (stackrox/rox#3667)
* Extend the flight replay deployment timeout from 30 seconds to 60 seconds

* X-Smart-Branch-Parent: master

* First cut at a go program which will report dashboard load time.

* refactor dashboard scale test as a go benchmark

* Move log to util

* Change getArgs to getEnvVars

* Add benchmark test for loading compliance.

* Translate between standard ID and standard name.  Split query creation and query running.

* Style for the Style God

* Run benchmarks in CI and store graphs

* Comment out the flight replay so I don't have to wait 65 minutes to test my changes.  Revert before merging.

* Fix a few strings I left in the compliance section.

* Split graph storage steps

* Fix config.yml, improve comment string, improve error logging

* Put the long replay back in.  The new steps seem to be working.

* Create benchmarking/graphing script as per PR feedback

* common2 -> pkgCommon

* More PR feedback

* Add execute permission to bench-and-graph.sh?  I didn't know git tracked this but it seems to count as a change and it isn't running in CI.

* PR feedback and minor bug fix

* Add a timeout to compliance runs and retry once before failing in case there was a transient problem.

* Start up a mock sensor before the compliance benchmark so we have a sensor to work with

* Can't use underscores in mock sensor names

* More logging

* Allow more time for compliance runs to finish, print dots so circleci doesn't kill the step, fix retry counter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -294,6 +294,33 @@ storeMonitoringMetrics: &storeMonitoringMetrics
     path: monitoring/grafana/rawmetrics.zip
     destination: monitoring-metrics.zip
 
+benchmarkDashboard: &benchmarkDashboard
+  run:
+    name: Benchmark dashboard queries
+
+    command: |
+      ./scripts/ci/bench-and-graph.sh .*Dashboard ./scale/tests/
+
+storeDashBenchImages: &storeDashBenchImages
+  store_artifacts:
+    path: monitoring/grafana/captures
+    destination: monitoring-images-dashboard-bench
+
+benchmarkCompliance: &benchmarkCompliance
+  run:
+    name: Benchmark compliance queries
+
+    command: |
+      ./scale/mocksensor/launch_mock_sensor.sh scale-test --node-interval=10ms --max-nodes=500 --deployment-interval=10ms --max-deployments=1000
+      # allow enough time for all the deployments to be processed
+      sleep 400
+      ./scripts/ci/bench-and-graph.sh .*Compliance ./scale/tests/
+
+storeComplianceBenchImages: &storeComplianceBenchImages
+  store_artifacts:
+    path: monitoring/grafana/captures
+    destination: monitoring-images-compliance-bench
+
 verifyNoStackRoxRestarts: &verifyNoStackRoxRestarts
   run:
     name: Verify that StackRox services did not restart during the runs
@@ -2063,6 +2090,7 @@ jobs:
             cci-export ROX_USERNAME "$ROX_USERNAME"
             cci-export ROX_PASSWORD "$ROX_PASSWORD"
             cci-export ROX_RECORDER_DB_CREDS /tmp/gcp.json
+            cci-export MAIN_IMAGE_TAG "$(make --quiet tag)"
 
       - *waitForAPI
 
@@ -2074,14 +2102,18 @@ jobs:
             # 65 min run so that we are confident that the run has completely finished
             ./scale/profiler/pprof.sh /tmp/pprof "${API_ENDPOINT}" 65
       - *storeProfilingResults
-      - *collectK8sLogs
       - *verifyNoStackRoxRestarts
-      - *storeK8sLogs
-
       - *connectToMonitoring
       - *collectMonitoringImages
       - *storeMonitoringImages
       - *storeMonitoringMetrics
+      - *benchmarkDashboard
+      - *storeDashBenchImages
+      - *benchmarkCompliance
+      - *storeComplianceBenchImages
+      - *collectK8sLogs
+      - *verifyNoStackRoxRestarts
+      - *storeK8sLogs
 
       - teardown-gke
 
