--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2417,8 +2417,11 @@ jobs:
             docker push        stackrox.io/monitoring:$MAIN_TAG | cat
 
             docker pull    docker.io/stackrox/collector:$COLLECTOR_TAG | cat
+            docker pull    "docker.io/stackrox/collector:${COLLECTOR_TAG}-latest" | cat
             docker tag     docker.io/stackrox/collector:$COLLECTOR_TAG collector.stackrox.io/collector:$COLLECTOR_TAG
+            docker tag     "docker.io/stackrox/collector:${COLLECTOR_TAG}-latest" "collector.stackrox.io/collector:${COLLECTOR_TAG}-latest"
             docker push collector.stackrox.io/collector:$COLLECTOR_TAG | cat
+            docker push "collector.stackrox.io/collector:${COLLECTOR_TAG}-latest" | cat
 
       - run:
           name: Push roxctl to stackrox-hub
@@ -2775,6 +2778,7 @@ workflows:
           requires:
             - build
             - unit-tests
+            - push-release
           filters:
             branches:
               ignore: /.*/
