--- a/image/templates/kubernetes/helm/centralchart/templates/00-serviceaccount.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/00-serviceaccount.yaml
@@ -19,18 +19,36 @@ metadata:
   name: central
   labels:
     app.kubernetes.io/name: stackrox
+{{if eq .Values.persistence.type "hostpath" -}}
+allowHostDirVolumePlugin: true
+{{else}}
+allowHostDirVolumePlugin: false
+{{- end}}
+allowedCapabilities: []
+allowHostIPC: false
+allowHostNetwork: false
+allowHostPID: false
+allowHostPorts: false
+allowPrivilegeEscalation: false
+allowPrivilegedContainer: false
+defaultAddCapabilities: []
+fsGroup:
+  type: MustRunAs
+  ranges:
+    - max: 4000
+      min: 4000
 priority: 100
+readOnlyRootFilesystem: true
+requiredDropCapabilities: []
 runAsUser:
-  type: RunAsAny
+  type: MustRunAs
+  uid: 4000
 seLinuxContext:
-  type: RunAsAny
+  type: MustRunAs
 seccompProfiles:
-- '*'
+  - '*'
 users:
 - system:serviceaccount:{{.Values.namespace}}:central
 volumes:
 - '*'
-{{if eq .Values.persistence.type "hostpath" -}}
-allowHostDirVolumePlugin: true
-{{- end}}
 {{- end}}
