--- a/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
@@ -54,6 +54,9 @@ spec:
 {{if not .Values.gcpMarketplace}}
       serviceAccount: central
 {{end}}
+      securityContext:
+        fsGroup: 4000
+        runAsUser: 4000
       containers:
       - name: central
         image: {{.Values.image}}
