--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -670,6 +670,7 @@ commands:
           name: Remove all the existing StackRox resources (they can exist when Circle restarts a container)
           command: |
             kubectl -n stackrox delete cm,deploy,ds,networkpolicy,secret,svc,serviceaccount,validatingwebhookconfiguration,pv,pvc,clusterrole,clusterrolebinding,role,rolebinding,psp -l "app.kubernetes.io/name=stackrox" --wait || true
+            kubectl delete ns stackrox --wait || true
             helm del --purge monitoring || true
             helm del --purge central || true
             helm del --purge scanner || true
