--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1626,6 +1626,7 @@ jobs:
       - LOAD_BALANCER: lb
       - ROX_PLAINTEXT_ENDPOINTS: "8080,grpc@8081"
       - ROX_CONFIG_MGMT_UI: true
+      - ROX_VULN_MGMT_UI: true
       - ROX_BADGER_DB: true
 
     steps:
