--- a/image/Dockerfile_rhel
+++ b/image/Dockerfile_rhel
@@ -1,8 +1,10 @@
 ARG DATA_IMAGE_TAG=latest
 FROM stackrox-data:$DATA_IMAGE_TAG AS data
 
-# For list of tags, ref: https://access.redhat.com/containers/?tab=tags#/registry.access.redhat.com/rhel7
-FROM registry.redhat.io/rhel7:7.6
+# For list of tags, ref: https://access.redhat.com/containers/?tab=tags#/registry.access.redhat.com/ubi7/ubi-minimal
+FROM registry.access.redhat.com/ubi7/ubi-minimal
+
+RUN microdnf install tar gzip
 
 LABEL name="stackrox.io/main"
 LABEL vendor="StackRox (support@stackrox.com)"
@@ -11,6 +13,8 @@ LABEL description="This image contains everything required to operate the StackR
 
 # Telegraf (for monitoring)
 RUN curl -L https://github.com/connorgorman/telegraf/releases/download/1.8.0%2B49-slim/telegraf -o /telegraf && chmod +x /telegraf
+
+RUN microdnf remove curl rpm rpm-libs microdnf libdnf libsolv
 
 ENV PATH="/stackrox:$PATH"
 
