--- a/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/deployment.yaml
@@ -111,6 +111,9 @@ spec:
           mountPath: /var/lib/stackrox
         - name: central-config-volume
           mountPath: /etc/stackrox
+        - name: proxy-config-volume
+          mountPath: /run/secrets/stackrox.io/proxy-config/
+          readOnly: true
       {{if .Values.monitoring}}
         - name: monitoring-client-volume
           mountPath: /run/secrets/stackrox.io/monitoring/certs
@@ -191,6 +194,10 @@ spec:
       - name: central-config-volume
         configMap:
           name: central-config
+          optional: true
+      - name: proxy-config-volume
+        secret:
+          secretName: proxy-config
           optional: true
       {{if .Values.monitoring}}
       - name: monitoring-client-volume
