Store debug dump on scale run (stackrox/rox#3976)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2228,6 +2228,7 @@ jobs:
       - *benchmarkCompliance
       - *storeComplianceBenchImages
       - *collectK8sLogs
+      - get-and-store-debug-dump
       - *verifyNoStackRoxRestarts
       - *storeK8sLogs
 
