--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -82,6 +82,8 @@ dependencies {
 
     compile group: 'com.github.docker-java', name: 'docker-java', version: '3.1.0-rc-3'
 
+    compile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.0'
+
     compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.7'
 
@@ -89,7 +91,6 @@ dependencies {
 
     compile group: 'com.opencsv', name: 'opencsv', version: '4.0'
 
-    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.0'
     testCompile group: 'com.google.code.gson', name: 'gson', version: '2.7'
     compile group: 'com.codepine.api', name: 'testrail-api-java-client', version: '2.0.1'
     compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
