Don't retry creating openshift forever (stackrox/rox#3997)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -840,6 +840,7 @@ commands:
             while (( ! success && try < 3 )); do
               rm -f openshift/terraform.tfplan || true
 
+              try=$((try + 1))
               success=1
               docker run --rm -t \
                 -v $PWD/openshift:/data \
