--- a/licenses/config.yaml
+++ b/licenses/config.yaml
@@ -13,6 +13,7 @@ generators:
       - aws/051999192406
       - aws/880732477823  # k@stackrox.com
       - aws/522993616158  # rhama@stackrox.com
+      - aws/598979716678  # akshat@stackrox.com
 - name: ci
   key:
     keyResourceId: "projects/stackrox-dev/locations/global/keyRings/licensing-ci/cryptoKeys/ci-license-signer/cryptoKeyVersions/1"
